fixing nav icon overlap on itty bitty phones

--- a/app/app.css
+++ b/app/app.css
@@ -67,6 +67,9 @@ h1 {
   line-height: 1.5em;
   text-align: center;
   color: black; }
+  @media screen and (max-width: 350px) {
+    h1 {
+      font-size: 2em; } }
   @media screen and (min-width: 751px) and (max-width: 1023px) {
     h1 {
       font-size: 3em;
@@ -168,7 +171,7 @@ a {
   background-color: black;
   opacity: 0; }
   .light-box nav {
-    margin-top: 25%; }
+    padding-top: 20%; }
     .light-box nav ul {
       list-style: none;
       text-align: center;
